# kolory

./: .gitignore  LICENSE  README.md  app.py  gif.py  main.py  pyproject.toml
